# robotarium-hub

./: .gitignore  README.md
clients/: A_star.py  Data_plot.py  Lider.py  LimitsAlgorithm.py  LimitsAlgorithmAgent.py  OrientationControl.py  Untitled.ipynb  agent.py  algorithm.py  algorithmFuzzy.py  archivo1.txt  aruco_agent.py  distanceToSegment.py  importserial.py  mock_agent.py  mock_charger.py  pi_agent.py  pi_agent_jaime.py  pi_agent_limits.py  rendevouz.py
clients/CalibrateFeedForward/: AgentConfiguration.xml  CalibrateFeedForwardAgent.py  leftMotorEquation.txt  linearRegression.py  rightMotorEquation.txt
clients/RegularAgent/: pi_agent.py
clients/RobotAgentLimits/: AgentConfiguration.xml  LimitsAlgorithm.py  OrientationControl.py  agent.py  pi_agent_limits.py
clients/fuzzy/: agent.py  algorithmFuzzy.py  algorithmFuzzy5.py  plotFuzzy.py
clients/graphicalData/: AgentConfiguration.xml  agent.py  robot_data.csv  robot_data.pickle  robot_positions.csv
clients/rendevouz/: rendevouz.py  rendevouz5.py
firmware/: Read.me
firmware/Robot/: Robot.ino  arduino_secrets.h  common.h  controler.cpp  controler.h  operation.h  robot.cpp  robot.h
firmware/arduinoAgent/: arduinoAgent.ino  common.h  robot.cpp
firmware/arduinoAgent_Arwen/: arduinoAgent_Arwen.ino  arduino_secrets.h  common.h  controler.h  (+2 more)
hub/: .gitignore  robotarium_hub.py  robotarium_server.py
hub/localization/: .gitignore  CMakeLists.txt  Makefile  README.md  calibration_params.yml  calibration_params2.yml  cli  main.cc
hub/localization/src/: CMakeLists.txt  cli.cc
hub/localization/src/commonFiles/: common.h  misc.cpp  misc.h
hub/localization/src/comunication/: comunication.cpp  comunication.h  data.txt
hub/localization/src/localization/: localization.cpp  localization.h
hub/localization/src/ringBuffer/: ringBuffer.cpp  ringBuffer.h
(+100 files in other folders)
